# graph-inv-cpp-lib

./: CMakeLists.txt
includes/ginv/: istanbul_ein_dataset.hpp
includes/ginv/clustering/: clauset_newman_moore.hpp  decaying_max_heap.hpp
includes/osigma/: oconnections.hpp  ograph.hpp  onodes.hpp
src/: istanbul_ein_dataset.cpp  main.cpp  ograph.cpp
tests/: test_clustering_clauset_newman_moore.cpp  test_clustering_decaying_max_heap.cpp
